--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -1,13 +1,13 @@
 .react-datepicker__input-container input {
-  width: 15rem;
+  width: 10rem;
   height: 2.5rem;
   padding: 5px 10px;
   background: #f5f5f5;
-  border: 1px solid white;
+  border: 1px solid #2586B8;
   border-radius: 10px;
   font-size: 15px;
   font-weight: 400;
-  text-align: center;
+  text-align: left;
   color: #2b2b2b;
 }
 
@@ -18,64 +18,13 @@
 .react-datepicker__triangle {
   display: none;
 }
-.react-datepicker {
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-  border: none !important;
-  border-radius: 4px;
-}
-.react-datepicker-wrapper {
-  width: 100px;
-}
-.react-datepicker__header {
-  height: 55px !important;
-  padding: 0 !important;
-  border: none !important;
-  position: relative;
-  text-align: center;
+
+.react-datepicker__navigation--previous{
+  left: 2px !important;
+  top: 8px !important;
 }
 
-.react-datepicker__month {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 200px;
-  margin-top: 25px !important;
-  margin-bottom: 20px !important;
+.react-datepicker__navigation--next{
+  right: 2px !important;
+  top: 8px !important;
 }
-
-.react-datepicker__week {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 14px;
-  margin: 0.5px 0;
-}
-.react-datepicker__day-name,
-.react-datepicker__day {
-  width: 2.5rem !important;
-  font-size: 12px;
-  line-height: 14px !important;
-  color: #7a7a7a !important;
-}
-.react-datepicker__day--selected {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 19px;
-  height: 14px;
-  background-color: white !important;
-  border-radius: 7px !important;
-  line-height: 14px;
-}
-
-.react-datepicker__day--keyboard-selected {
-  background-color: white !important;
-  color: #2b2b2b !important;
-}
-.react-datepicker__day--today {
-  background-color: white;
-  color: #2b2b2b;
-}
-
