--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -1,11 +1,24 @@
 .react-datepicker__input-container input {
-  width: 12rem;
-  height: 2.5rem;
+  width: 10rem;
+  height: 2.0rem;
   padding: 5px 10px;
   background: #f5f5f5;
   border: 1px solid #2586B8;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: 13px;
+  font-weight: 400;
+  text-align: left;
+  color: #2b2b2b;
+}
+
+.react-datepicker__input-container button {
+  width: 10rem;
+  height: 2.0rem;
+  padding: 5px 10px;
+  background: #f5f5f5;
+  border: 1px solid #2586B8;
+  border-radius: 10px;
+  font-size: 13px;
   font-weight: 400;
   text-align: left;
   color: #2b2b2b;
@@ -39,7 +52,7 @@
 }
 
 .react-datepicker__input-container .react-datepicker__calendar-icon {
-  margin-top: 3px;
+  margin-top: 0px;
   margin-left: 3px;
 }
 
